--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ body {
 }
 
 .hero {
-  background-image: url('../img/bank-tree.jpeg');
+  background-image: url("../img/bank-tree.jpeg");
   background-position: 0 -50px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -98,6 +98,12 @@ body {
 .hero-content .text {
   margin-bottom: 0;
   font-size: 0.9rem;
+}
+
+.cover {
+  object-fit: cover;
+  width: auto;
+  max-height: 400px;
 }
 
 @media (min-width: 920px) {
