--- a/argentbank/src/index.css
+++ b/argentbank/src/index.css
@@ -102,3 +102,22 @@ code {
   padding: 5px;
   font-size: 1.2rem;
 }
+
+/* STYLE PAGE USER*/
+
+.mainUser {
+  background-color: #12002b;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
+.edit-button {
+  border-color: #00bc77;
+  background-color: #00bc77;
+  color: #fff;
+  font-weight: bold;
+  padding: 10px;
+}
