--- a/argentbank/src/index.css
+++ b/argentbank/src/index.css
@@ -103,6 +103,11 @@ code {
   font-size: 1.2rem;
 }
 
+.errorMessage {
+  color: red;
+  margin-bottom: 1rem;
+}
+
 /* STYLE PAGE USER*/
 
 .mainUser {
