--- a/argentbank/src/styles/Nav.css
+++ b/argentbank/src/styles/Nav.css
@@ -5,23 +5,43 @@
   padding: 5px 20px;
 }
 
-/* .main-nav a {
+.navLinkWrapper {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.navLink {
+  padding: 0;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: 16px;
   font-weight: bold;
+  border: none;
+  background-color: transparent;
+  text-decoration: none;
   color: #2c3e50;
 }
 
+/* 
 .main-nav a.router-link-exact-active {
   color: #42b983;
 }
+*/
 
-.main-nav-item {
-  text-decoration: none;
-  margin-right: 0.5rem;
+.navLink:hover {
+  text-decoration: underline;
 }
 
-.main-nav-item:hover {
-  text-decoration: underline;
-} */
+.userWrapper p {
+  margin: 0;
+}
+
+.logWrapper {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
 
 .navLogo {
   display: flex;
@@ -36,4 +56,5 @@
 .userCircle {
   width: 25px;
   height: 25px;
+  color: #2c3e50;
 }
