--- a/argentbank/src/index.css
+++ b/argentbank/src/index.css
@@ -119,10 +119,23 @@ code {
   height: 100%;
 }
 
-.edit-button {
+.edit-button,
+.save-button,
+.cancel-button {
   border-color: #00bc77;
   background-color: #00bc77;
   color: #fff;
   font-weight: bold;
   padding: 10px;
+}
+
+.edit-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.edit-input {
+  padding: 5px;
+  font-size: 1.2rem;
 }
