--- a/argentbank/src/index.css
+++ b/argentbank/src/index.css
@@ -116,6 +116,15 @@ code {
   margin-bottom: 1rem;
 }
 
+.sign-in-button {
+  border-color: #00bc77;
+  background-color: #00bc77;
+  color: #fff;
+  font-weight: bold;
+  padding: 10px;
+  margin-top: 15px;
+}
+
 /* STYLE PAGE USER*/
 
 .mainUser {
